z-index fix and wording modification

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5117,15 +5117,16 @@ button:active, .button:active {
   font-family: "phosphatesolid";
   letter-spacing: 1.2px;
   font-size: 25px;
+  z-index: 2;
 }
-/* line 46, ../../styles/_game.scss */
+/* line 47, ../../styles/_game.scss */
 .question-container .answer-choice .congressman-infos, .answer-container .answer-choice .congressman-infos, .results-container .answer-choice .congressman-infos {
   margin-bottom: 10px;
   margin-top: 30px;
   text-align: center;
   width: 100%;
 }
-/* line 52, ../../styles/_game.scss */
+/* line 53, ../../styles/_game.scss */
 .question-container .answer-choice .congressman-infos .congressman-name, .answer-container .answer-choice .congressman-infos .congressman-name, .results-container .answer-choice .congressman-infos .congressman-name {
   text-transform: uppercase;
   font-family: "phosphatesolid";
@@ -5133,14 +5134,14 @@ button:active, .button:active {
   font-size: 20px;
   display: block;
 }
-/* line 60, ../../styles/_game.scss */
+/* line 61, ../../styles/_game.scss */
 .question-container .answer-choice .congressman-infos .congressman-party, .answer-container .answer-choice .congressman-infos .congressman-party, .results-container .answer-choice .congressman-infos .congressman-party {
   font-family: "Playfair Display", serif;
   letter-spacing: 1.2px;
   font-size: 16px;
   display: block;
 }
-/* line 68, ../../styles/_game.scss */
+/* line 69, ../../styles/_game.scss */
 .question-container .answer-choice .congressman-successrate, .answer-container .answer-choice .congressman-successrate, .results-container .answer-choice .congressman-successrate {
   font-family: "Playfair Display", serif;
   display: inline-block;
@@ -5152,13 +5153,13 @@ button:active, .button:active {
   font-style: normal;
   border-radius: 3px;
 }
-/* line 81, ../../styles/_game.scss */
+/* line 82, ../../styles/_game.scss */
 .question-container .question-choice, .question-container .answer-container, .answer-container .question-choice, .answer-container .answer-container, .results-container .question-choice, .results-container .answer-container {
   text-align: center;
   width: 100%;
   position: relative;
 }
-/* line 86, ../../styles/_game.scss */
+/* line 87, ../../styles/_game.scss */
 .question-container .question-choice .bg-slider, .question-container .answer-container .bg-slider, .answer-container .question-choice .bg-slider, .answer-container .answer-container .bg-slider, .results-container .question-choice .bg-slider, .results-container .answer-container .bg-slider {
   position: absolute;
   top: 50%;
@@ -5172,7 +5173,7 @@ button:active, .button:active {
   -o-transform: translate(0, -50%);
   transform: translate(0, -50%);
 }
-/* line 96, ../../styles/_game.scss */
+/* line 97, ../../styles/_game.scss */
 .question-container .question-choice .bg-slider:after, .question-container .answer-container .bg-slider:after, .answer-container .question-choice .bg-slider:after, .answer-container .answer-container .bg-slider:after, .results-container .question-choice .bg-slider:after, .results-container .answer-container .bg-slider:after {
   content: '';
   width: calc(100% - 298px);
@@ -5187,7 +5188,7 @@ button:active, .button:active {
   -o-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
-/* line 108, ../../styles/_game.scss */
+/* line 109, ../../styles/_game.scss */
 .question-container .question-choice .bg-slider .bullet, .question-container .answer-container .bg-slider .bullet, .answer-container .question-choice .bg-slider .bullet, .answer-container .answer-container .bg-slider .bullet, .results-container .question-choice .bg-slider .bullet, .results-container .answer-container .bg-slider .bullet {
   display: inline-block;
   vertical-align: middle;
@@ -5207,19 +5208,19 @@ button:active, .button:active {
   background-position: center;
   cursor: pointer;
 }
-/* line 125, ../../styles/_game.scss */
+/* line 126, ../../styles/_game.scss */
 .question-container .question-choice .bg-slider .bullet.right, .question-container .answer-container .bg-slider .bullet.right, .answer-container .question-choice .bg-slider .bullet.right, .answer-container .answer-container .bg-slider .bullet.right, .results-container .question-choice .bg-slider .bullet.right, .results-container .answer-container .bg-slider .bullet.right {
   background-image: url("../images/arrow-right.svg");
   right: 69px;
   left: auto;
 }
 @media (max-width: 767px) {
-  /* line 86, ../../styles/_game.scss */
+  /* line 87, ../../styles/_game.scss */
   .question-container .question-choice .bg-slider, .question-container .answer-container .bg-slider, .answer-container .question-choice .bg-slider, .answer-container .answer-container .bg-slider, .results-container .question-choice .bg-slider, .results-container .answer-container .bg-slider {
     display: none;
   }
 }
-/* line 137, ../../styles/_game.scss */
+/* line 138, ../../styles/_game.scss */
 .question-container .question-choice .question-button, .question-container .answer-container .question-button, .answer-container .question-choice .question-button, .answer-container .answer-container .question-button, .results-container .question-choice .question-button, .results-container .answer-container .question-button {
   position: absolute;
   left: 0;
@@ -5230,7 +5231,7 @@ button:active, .button:active {
   top: 50%;
   margin-top: 0;
 }
-/* line 144, ../../styles/_game.scss */
+/* line 145, ../../styles/_game.scss */
 .question-container .question-choice .question-button.button-right, .question-container .answer-container .question-button.button-right, .answer-container .question-choice .question-button.button-right, .answer-container .answer-container .question-button.button-right, .results-container .question-choice .question-button.button-right, .results-container .answer-container .question-button.button-right {
   left: auto;
   right: 0;
@@ -5241,7 +5242,7 @@ button:active, .button:active {
   top: 50%;
 }
 @media (max-width: 767px) {
-  /* line 137, ../../styles/_game.scss */
+  /* line 138, ../../styles/_game.scss */
   .question-container .question-choice .question-button, .question-container .answer-container .question-button, .answer-container .question-choice .question-button, .answer-container .answer-container .question-button, .results-container .question-choice .question-button, .results-container .answer-container .question-button {
     top: 0;
     -webkit-transform: translate(0, -100%);
@@ -5260,7 +5261,7 @@ button:active, .button:active {
     letter-spacing: 2px;
     padding: 20px 0;
   }
-  /* line 166, ../../styles/_game.scss */
+  /* line 167, ../../styles/_game.scss */
   .question-container .question-choice .question-button:hover, .question-container .answer-container .question-button:hover, .answer-container .question-choice .question-button:hover, .answer-container .answer-container .question-button:hover, .results-container .question-choice .question-button:hover, .results-container .answer-container .question-button:hover {
     background: transparent;
     box-shadow: none;
@@ -5269,7 +5270,7 @@ button:active, .button:active {
     -o-transform: translate(0, -100%);
     transform: translate(0, -100%);
   }
-  /* line 172, ../../styles/_game.scss */
+  /* line 173, ../../styles/_game.scss */
   .question-container .question-choice .question-button.button-right, .question-container .answer-container .question-button.button-right, .answer-container .question-choice .question-button.button-right, .answer-container .answer-container .question-button.button-right, .results-container .question-choice .question-button.button-right, .results-container .answer-container .question-button.button-right {
     bottom: 0;
     top: auto;
@@ -5281,52 +5282,52 @@ button:active, .button:active {
     margin-top: 0;
   }
 }
-/* line 183, ../../styles/_game.scss */
+/* line 184, ../../styles/_game.scss */
 .question-container .score, .question-container .quiz-progress, .question-container .results-score, .answer-container .score, .answer-container .quiz-progress, .answer-container .results-score, .results-container .score, .results-container .quiz-progress, .results-container .results-score {
   margin-top: 20px;
 }
 @media (min-width: 768px) {
-  /* line 189, ../../styles/_game.scss */
+  /* line 190, ../../styles/_game.scss */
   .question-container.right-selected .gauche, .question-container.right-selected .droite, .answer-container.right-selected .gauche, .answer-container.right-selected .droite, .results-container.right-selected .gauche, .results-container.right-selected .droite {
     width: 50% !important;
   }
-  /* line 192, ../../styles/_game.scss */
+  /* line 193, ../../styles/_game.scss */
   .question-container.right-selected .question-choice, .answer-container.right-selected .question-choice, .results-container.right-selected .question-choice {
     text-align: right;
   }
-  /* line 195, ../../styles/_game.scss */
+  /* line 196, ../../styles/_game.scss */
   .question-container.right-selected .question-choice img.congressman-photo, .answer-container.right-selected .question-choice img.congressman-photo, .results-container.right-selected .question-choice img.congressman-photo {
     left: 0 !important;
   }
 }
-/* line 202, ../../styles/_game.scss */
+/* line 203, ../../styles/_game.scss */
 .question-container.right-selected .gauche, .answer-container.right-selected .gauche, .results-container.right-selected .gauche {
   opacity: .7;
 }
 @media (min-width: 768px) {
-  /* line 209, ../../styles/_game.scss */
+  /* line 210, ../../styles/_game.scss */
   .question-container.left-selected .gauche, .question-container.left-selected .droite, .answer-container.left-selected .gauche, .answer-container.left-selected .droite, .results-container.left-selected .gauche, .results-container.left-selected .droite {
     width: 50% !important;
   }
-  /* line 212, ../../styles/_game.scss */
+  /* line 213, ../../styles/_game.scss */
   .question-container.left-selected .question-choice, .answer-container.left-selected .question-choice, .results-container.left-selected .question-choice {
     text-align: left;
   }
-  /* line 215, ../../styles/_game.scss */
+  /* line 216, ../../styles/_game.scss */
   .question-container.left-selected .question-choice img.congressman-photo, .answer-container.left-selected .question-choice img.congressman-photo, .results-container.left-selected .question-choice img.congressman-photo {
     left: 0 !important;
   }
 }
-/* line 221, ../../styles/_game.scss */
+/* line 222, ../../styles/_game.scss */
 .question-container.left-selected .droite, .answer-container.left-selected .droite, .results-container.left-selected .droite {
   opacity: .7;
 }
-/* line 227, ../../styles/_game.scss */
+/* line 228, ../../styles/_game.scss */
 .question-container .question-choice img.congressman-photo .left-choice, .question-container .question-choice img.congressman-photo .right-choice, .answer-container .question-choice img.congressman-photo .left-choice, .answer-container .question-choice img.congressman-photo .right-choice, .results-container .question-choice img.congressman-photo .left-choice, .results-container .question-choice img.congressman-photo .right-choice {
   display: none;
 }
 @media (max-width: 767px) {
-  /* line 234, ../../styles/_game.scss */
+  /* line 235, ../../styles/_game.scss */
   .question-container .question-choice img.congressman-photo .left-choice, .answer-container .question-choice img.congressman-photo .left-choice, .results-container .question-choice img.congressman-photo .left-choice {
     position: absolute;
     display: block;
@@ -5344,7 +5345,7 @@ button:active, .button:active {
     letter-spacing: 1.2px;
     font-size: 32px;
   }
-  /* line 248, ../../styles/_game.scss */
+  /* line 249, ../../styles/_game.scss */
   .question-container .question-choice img.congressman-photo .right-choice, .answer-container .question-choice img.congressman-photo .right-choice, .results-container .question-choice img.congressman-photo .right-choice {
     position: absolute;
     display: block;
@@ -5363,7 +5364,7 @@ button:active, .button:active {
     font-size: 32px;
   }
 }
-/* line 267, ../../styles/_game.scss */
+/* line 268, ../../styles/_game.scss */
 .question-container.response .question-choice .validator, .answer-container.response .question-choice .validator, .results-container.response .question-choice .validator {
   transform: scale(1) translate(-50%, -50%);
   -moz-transform: scale(1) translate(-50%, -50%);
@@ -5371,7 +5372,7 @@ button:active, .button:active {
   -ms-transform: scale(1) translate(-50%, -50%);
 }
 @media (max-width: 767px) {
-  /* line 267, ../../styles/_game.scss */
+  /* line 268, ../../styles/_game.scss */
   .question-container.response .question-choice .validator, .answer-container.response .question-choice .validator, .results-container.response .question-choice .validator {
     height: 64px;
     width: 64px;
@@ -5380,58 +5381,58 @@ button:active, .button:active {
   }
 }
 @media (max-width: 767px) {
-  /* line 283, ../../styles/_game.scss */
+  /* line 284, ../../styles/_game.scss */
   .question-container.response .v-center, .answer-container.response .v-center, .results-container.response .v-center {
     margin-top: 50px;
   }
-  /* line 286, ../../styles/_game.scss */
+  /* line 287, ../../styles/_game.scss */
   .question-container.response .v-center .button, .answer-container.response .v-center .button, .results-container.response .v-center .button {
     margin-top: 90px;
   }
 }
 
-/* line 293, ../../styles/_game.scss */
+/* line 294, ../../styles/_game.scss */
 .answer-container .logo {
   display: none;
 }
 
-/* line 301, ../../styles/_game.scss */
+/* line 302, ../../styles/_game.scss */
 .results-container .results-score {
   margin-top: 10px;
 }
 
-/* line 306, ../../styles/_game.scss */
+/* line 307, ../../styles/_game.scss */
 .score, .quiz-progress, .results-score {
   color: white;
   font-family: "phosphatesolid";
   font-size: 45px;
   letter-spacing: 1px;
 }
-/* line 312, ../../styles/_game.scss */
+/* line 313, ../../styles/_game.scss */
 .score span, .quiz-progress span, .results-score span {
   font-size: 30px;
 }
 
-/* line 319, ../../styles/_game.scss */
+/* line 320, ../../styles/_game.scss */
 body.response-wrong .validator {
   background-image: url("../images/wrong.svg");
 }
-/* line 325, ../../styles/_game.scss */
+/* line 326, ../../styles/_game.scss */
 body.response-correct .validator {
   background-image: url("../images/correct.svg");
 }
 
-/* line 333, ../../styles/_game.scss */
+/* line 334, ../../styles/_game.scss */
 .results-container .logo img {
   height: 134px;
 }
 @media (max-width: 767px) {
-  /* line 332, ../../styles/_game.scss */
+  /* line 333, ../../styles/_game.scss */
   .results-container .logo {
     display: none;
   }
 }
-/* line 342, ../../styles/_game.scss */
+/* line 343, ../../styles/_game.scss */
 .results-container .validator {
   position: relative;
   height: 100px;
@@ -5445,12 +5446,12 @@ body.response-correct .validator {
   background-position: center;
   background-image: url("../images/correct.svg");
 }
-/* line 355, ../../styles/_game.scss */
+/* line 356, ../../styles/_game.scss */
 .results-container .validator.error {
   background-image: url("../images/wrong.svg");
 }
 
-/* line 363, ../../styles/_game.scss */
+/* line 364, ../../styles/_game.scss */
 .answer-status-correct:after,
 .answer-status-incorrect:after {
   content: '';
@@ -5473,7 +5474,7 @@ body.response-correct .validator {
   -o-transform: translate(-50%, 0);
   transform: translate(-50%, 0);
 }
-/* line 383, ../../styles/_game.scss */
+/* line 384, ../../styles/_game.scss */
 .answer-status-correct.answer-status-incorrect:after,
 .answer-status-incorrect.answer-status-incorrect:after {
   background-image: url("../images/wrong.svg");
